Completed oding_project html / CSS. Designed the front page of google

--- a/index.html
+++ b/index.html
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="stysheet.css">
-        <title>
-            Google
-        </title>
-    </head>
-    <body>
-        <div class="img_divide">
-                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
-                alt="Google" height="92" class="img_class">
+
+<head>
+    <link rel="stylesheet" type="text/css" href="stysheet.css">
+    <title>
+        Google
+    </title>
+</head>
+
+<body>
+    <div>
+        <div class="top_bar">
+            <ul class="first_up">
+                <li><a href="https://about.google.com">About</a></li>
+                <li><a href="https://store.google.com">Store</a></li>
+            </ul>
+            <ul class="second_up">
+                <li class="opac"><a href="https://mail.google.com/">Gmail</a></li>
+                <li class="opac"><a href="https://images.google.com">Images</a></li>
+                <li> <a href="https://accounts.google.com"><input type="button" value="Sign in" class="sign_in"></a>
+                </li>
+            </ul>
         </div>
-       
+
+        <div class="bottom_bar">
+                <ul class="first_up">
+                    <li>Advertising</li>
+                    <li>Business</li>
+                    <li>How Search works</li>
+                </ul>
+                <ul class="second_up">
+                        <li>Privacy</li>
+                        <li>Terms</li>
+                        <li>Settings</li>
+                </ul>
+            </div>
+
+        <div class="img_divide">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google"
+                height="92" class="img_class">
+        </div>
+
         <div>
             <center>
                 <form>
                     <div>
-                        <input class="curve_search" type="text" size = 60px>
+                        <input class="curve_search" type="text" size=60px>
                     </div>
                     <div>
                         <input type="submit" value="Google Search" class="curve_button">
@@ -25,5 +54,7 @@
                 </form>
             </center>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
